--- a/loleaflet/css/loleaflet.css
+++ b/loleaflet/css/loleaflet.css
@@ -435,3 +435,12 @@ body {
 	bottom: 40px !important;
 	right: 10px !important;
 }
+
+:-ms-fullscreen {
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
