--- a/loleaflet/css/loleaflet.css
+++ b/loleaflet/css/loleaflet.css
@@ -16,6 +16,18 @@
     display: none;
 }
 
+.logo_odt {background: url('../dist/images/lc_logo_odt_scale1.svg') no-repeat center }
+.logo_ods {background: url('../dist/images/lc_logo_ods_scale1.svg') no-repeat center }
+.logo_odp {background: url('../dist/images/lc_logo_odp_scale1.svg') no-repeat center }
+
+#logo{
+    position: fixed;
+    min-height: 30px;
+    width: 30px;
+    z-index: 99999;
+    top: 0px;
+}
+
 #logo.readonly {
     background-size: 100px;
     top: -5px;
