--- a/loleaflet/css/loleaflet.css
+++ b/loleaflet/css/loleaflet.css
@@ -129,14 +129,14 @@ body {
 }
 
 .loleaflet-font {
-    font-family: "Segoe UI", Tahoma, Arial, Helvetica, sans-serif !important;
-    font-size: 12px !important;
+    font-family: Arial, "Liberation Sans", "Microsoft JhengHei", "Heiti TC", "Noto Sans TC", "Source Han Sans TC", sans-serif;
+    font-size: 14px !important;
     font-weight: normal !important;
 }
 
 .loleaflet-character {
 	table-layout: fixed;
-	font: 17px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
+	font: 17px/1.5 Arial, "Liberation Sans", "Microsoft JhengHei", "Heiti TC", "Noto Sans TC", "Source Han Sans TC", sans-serif;
 	text-align: center;
 }
 
@@ -145,6 +145,7 @@ body {
 }
 
 .loleaflet-controls {
+    	font-family: Arial, "Liberation Sans", "Microsoft JhengHei", "Heiti TC", "Noto Sans TC", "Source Han Sans TC", sans-serif;
 	margin-right: 10px;
 }
 
@@ -193,7 +194,7 @@ body {
 /* Important to override context-menu-icon's font-family here otherwise, jquery-contextmenu.css
  * will try to load its own font file which is not available in dist/ */
 .context-menu-icon::before {
-	font-family: "Segoe UI", Tahoma, Arial, Helvetica, sans-serif !important;
+	font-family: Arial, "Liberation Sans", "Microsoft JhengHei", "Heiti TC", "Noto Sans TC", "Source Han Sans TC", sans-serif !important;
 }
 .context-menu-icon-lo-checkmark:before {
 	content: '\2713';
@@ -210,8 +211,8 @@ body {
 
 .loleaflet-annotation-content-wrapper, .loleaflet-annotation-redline-content-wrapper {
 	padding: 8px;
-	font-family: "Segoe UI", Tahoma, Arial, Helvetica, sans-serif !important;
-	font-size: 13px;
+	font-family: Arial, "Liberation Sans", "Microsoft JhengHei", "Heiti TC", "Noto Sans TC", "Source Han Sans TC", sans-serif;
+	font-size: 14px;
 	text-align: left;
 	background-color: #efefef;
 	box-shadow: 0px 3px 6px rgba(0,0,0,0.2);
@@ -253,8 +254,8 @@ body {
 }
 
 .loleaflet-annotation-textarea {
-	font-family: "Segoe UI", Tahoma, Arial, Helvetica, sans-serif !important;
-	font-size: 13px;
+	font-family: Arial, "Liberation Sans", "Microsoft JhengHei", "Heiti TC", "Noto Sans TC", "Source Han Sans TC", sans-serif !important;
+	font-size: 14px;
 	border: 1px solid #c8c8c8;
 	background-color: white;
 	overflow-x: hidden;
@@ -329,7 +330,7 @@ body {
 }
 
 .loleaflet-annotation-date {
-	font-size: 11px;
+	font-size: 12px;
 }
 
 .loleaflet-annotation-userline {
