--- a/loleaflet/css/loleaflet.css
+++ b/loleaflet/css/loleaflet.css
@@ -58,6 +58,7 @@
 }
 
 body {
+    font-family: Arial, "Liberation Sans", "Microsoft JhengHei", "Heiti TC", "Noto Sans TC", "Source Han Sans TC", sans-serif;
     margin: 0;
     overflow: hidden;
     overscroll-behavior-y: none; /* disable the pull to reload gesture */
