把子選單箭頭符號，改為U+23f5

--- a/loleaflet/css/menubar.css
+++ b/loleaflet/css/menubar.css
@@ -123,6 +123,7 @@ serif;
 .lo-menu ul a span.sub-arrow {
     right: 0;
     margin-right: 5px;
+    width: auto;
     background: transparent; /* we want them to be transparent always whether mobile or desktop */
 }
 .lo-menu ul > li {
