修正 main-nav margin 改為 0px，避免留白 增加 #menu-last-mod CSS，為顯示最後修改時間作準備

--- a/loleaflet/css/loleaflet.css
+++ b/loleaflet/css/loleaflet.css
@@ -78,6 +78,12 @@ body {
     width: 0;
 }
 
+@media (max-width: 900px) {
+        #menu-last-mod {
+                display: none;
+        }
+}
+
 @media (max-width: 768px),(max-device-height: 768px) {
     /* Show slidesorter beyond 768px only */
     #presentation-controls-wrapper {
