--- a/loleaflet/css/menubar.css
+++ b/loleaflet/css/menubar.css
@@ -51,7 +51,7 @@
     height: 30px; /* on mouseover menubar items, border emerges */
     width: auto;
     background: #efefef;
-    margin: 3px;
+    margin: 0px;
     white-space: nowrap;
 }
 
@@ -318,4 +318,12 @@ serif;
 
 .lo-menu-item-checked:hover::before {
     color: #fff;
+}
+
+#menu-last-mod a {
+    color: grey;
+    text-decoration: underline;
+    padding: 8px 15px 7px 15px;
+    z-index: 500;
+    border: 1px solid transparent;
 }
