--- a/loleaflet/css/loleaflet.css
+++ b/loleaflet/css/loleaflet.css
@@ -118,6 +118,30 @@ body {
     }
 }
 
+.screen-watermark {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0);
+  text-align:center;
+  position: absolute;
+  top: 0;
+  left:0;
+  padding: 0;
+  pointer-events: none;
+  color: whitesmoke;
+  z-index: 10000000;
+  color:rgba(200,200,200,0.5);
+  font-size:25vmin;
+}
+
+.screen-watermark:before {
+  content: "";
+  height: 100%;
+  display: inline-block;
+  vertical-align: middle;
+}
+
 .loleaflet-font {
     font-family: Arial, "Liberation Sans", "Microsoft JhengHei", "Heiti TC", "Noto Sans TC", "Source Han Sans TC", sans-serif;
     font-size: 14px !important;
