--- a/loleaflet/css/loleaflet.css
+++ b/loleaflet/css/loleaflet.css
@@ -78,6 +78,25 @@ body {
     width: 0;
 }
 
+#mobile-edit-button {
+        position: absolute;
+	text-align:center;
+        width: 56px;
+        height: 56px;
+        right: 16px;
+        bottom: 16px;
+        background-color: #ff8000;
+        border-radius: 50%;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        z-index: 2000;
+}
+
+#mobile-edit-button-icon {
+	line-height: 56px;
+	font-size: 24px;
+	color: #ffffff;
+}
+
 @media (max-width: 900px) {
         #menu-last-mod {
                 display: none;
