--- a/loleaflet/css/toolbar.css
+++ b/loleaflet/css/toolbar.css
@@ -34,6 +34,7 @@ w2ui-toolbar {
 #spreadsheet-toolbar {
     left: 0;
     text-align: center;
+    height: 32px;
     bottom: 33px;
     padding: 0;
     position: absolute;
