--- a/loleaflet/css/toolbar.css
+++ b/loleaflet/css/toolbar.css
@@ -530,6 +530,8 @@ button.leaflet-control-search-next
 .w2ui-icon.backcolor{ background: url('images/lc_backcolor.svg') no-repeat center !important; }
 .w2ui-icon.bold{ background: url('images/lc_bold.svg') no-repeat center !important; }
 .w2ui-icon.annotation{ background: url('images/lc_showannotations.svg') no-repeat center !important; }
+.w2ui-icon.insertannotation{ background: url('images/lc_insertannotation.svg') no-repeat center !important; }
+.w2ui-icon.inserthyperlink{ background: url('images/lc_inserthyperlink.svg') no-repeat center !important; }
 .w2ui-icon.bullet{ background: url('images/lc_defaultbullet.svg') no-repeat center !important; }
 .w2ui-icon.cancel{ background: url('images/lc_cancel.svg') no-repeat center !important; }
 .w2ui-icon.color{ background: url('images/lc_color.svg') no-repeat center !important; }
@@ -541,18 +543,21 @@ button.leaflet-control-search-next
 .w2ui-icon.help{ background: url('images/lc_helpindex.svg') no-repeat center !important; }
 .w2ui-icon.incrementindent{ background: url('images/lc_decrementlevel.svg') no-repeat center !important; }
 .w2ui-icon.insertpage{ background: url('images/lc_insertpage.svg') no-repeat center !important; }
-.w2ui-icon.insertsheet{ background: url('images/plus.svg') no-repeat center !important; }
+.w2ui-icon.insertsheet{ background: url('images/lc_insert.svg') no-repeat center !important; }
 .w2ui-icon.italic{ background: url('images/lc_italic.svg') no-repeat center !important; }
-.w2ui-icon.insertgraphic{ background: url('images/lc_gallery.svg') no-repeat center !important; }
+.w2ui-icon.insertgraphic{ background: url('images/lc_insertgraphic.svg') no-repeat center !important; }
 .w2ui-icon.inserttable{ background: url('images/lc_inserttable.svg') no-repeat center !important; }
 .w2ui-icon.setborderstyle{ background: url('images/lc_setborderstyle.svg') no-repeat center !important; }
 .w2ui-icon.conditionalformatdialog{ background: url('images/lc_conditionalformatdialog.svg') no-repeat center !important; }
-.w2ui-icon.next{ background: url('images/lc_downsearch.svg') no-repeat center !important; }
+.w2ui-icon.next{ background: url('images/lc_movedown.svg') no-repeat center !important; }
 .w2ui-icon.numbering{ background: url('images/lc_defaultnumbering.svg') no-repeat center !important; }
 .w2ui-icon.presentation{ background: url('images/lc_dia.svg') no-repeat center !important; }
-.w2ui-icon.prev{ background: url('images/lc_upsearch.svg') no-repeat center !important; }
+.w2ui-icon.prev{ background: url('images/lc_moveup.svg') no-repeat center !important; }
 .w2ui-icon.print{ background: url('images/lc_print.svg') no-repeat center !important; }
 .w2ui-icon.redo{ background: url('images/lc_redo.svg') no-repeat center !important; }
+.w2ui-icon.copyformat{ background: url('images/lc_formatpaintbrush.svg') no-repeat center !important; }
+.w2ui-icon.deleteformat{ background: url('images/lc_resetattributes.svg') no-repeat center !important; }
+.w2ui-icon.linespacing{ background: url('images/lc_linespacing.svg') no-repeat center !important; }
 .w2ui-icon.save{ background: url('images/lc_save.svg') no-repeat center !important; }
 .w2ui-icon.saveas{ background: url('images/lc_saveas.svg') no-repeat center !important; }
 .w2ui-icon.savemodified{ background: url('images/savemodified_large.svg') no-repeat center !important; }
@@ -560,8 +565,8 @@ button.leaflet-control-search-next
 .w2ui-icon.insertfootnote{ background: url('images/lc_insertfootnote.svg') no-repeat center !important; }
 .w2ui-icon.underline{ background: url('images/lc_underline.svg') no-repeat center !important; }
 .w2ui-icon.undo{ background: url('images/lc_undo.svg') no-repeat center !important; }
-.w2ui-icon.zoomin{ background: url('images/plus.svg') no-repeat center !important; }
-.w2ui-icon.zoomout{ background: url('images/minus.svg') no-repeat center !important; }
+.w2ui-icon.zoomin{ background: url('images/lc_zoomin.svg') no-repeat center !important; }
+.w2ui-icon.zoomout{ background: url('images/lc_zoomout.svg') no-repeat center !important; }
 .w2ui-icon.zoomreset{ background: url('images/lc_view100.svg') no-repeat center !important; }
 .w2ui-icon.more{ background: url('images/lc_downsearch.svg') no-repeat center !important; }
 .w2ui-icon.firstrecord{ background: url('images/lc_firstrecord.svg') no-repeat center !important; }
@@ -570,17 +575,17 @@ button.leaflet-control-search-next
 .w2ui-icon.lastrecord{ background: url('images/lc_lastrecord.svg') no-repeat center !important; }
 .w2ui-icon.wraptext{ background: url('images/lc_wraptext.svg') no-repeat center !important; }
 .w2ui-icon.togglemergecells{ background: url('images/lc_togglemergecells.svg') no-repeat center !important; }
-.w2ui-icon.numberformatcurrency{ background: url('images/lc_formattedfield.svg') no-repeat center !important; }
+.w2ui-icon.numberformatcurrency{ background: url('images/lc_currencyfield.svg') no-repeat center !important; }
 .w2ui-icon.numberformatpercent{ background: url('images/lc_numberformatpercent.svg') no-repeat center !important; }
 .w2ui-icon.numberformatdecimal{ background: url('images/lc_numberformatdecimal.svg') no-repeat center !important; }
-.w2ui-icon.numberformatdate{ background: url('images/lc_datefield.svg') no-repeat center !important; }
+.w2ui-icon.numberformatdate{ background: url('images/lc_numberformatdate.svg') no-repeat center !important; }
 .w2ui-icon.numberformatincdecimals{ background: url('images/lc_numberformatincdecimals.svg') no-repeat center !important; }
 .w2ui-icon.numberformatdecdecimals{ background: url('images/lc_numberformatdecdecimals.svg') no-repeat center !important; }
 .w2ui-icon.sortascending{ background: url('images/lc_sortascending.svg') no-repeat center !important; }
 .w2ui-icon.sortdescending{ background: url('images/lc_sortdescending.svg') no-repeat center !important; }
 .w2ui-icon.selected{ background: url('images/lc_ok.svg') no-repeat center !important; }
 .w2ui-icon.repair{ background: url('images/lc_backward.svg') no-repeat center !important; }
-.w2ui-icon.specialcharacter{ background: url('images/lc_insertsymbol.svg') no-repeat center !important; }
+.w2ui-icon.insertsymbol{ background: url('images/lc_insertsymbol.svg') no-repeat center !important; }
 .w2ui-icon.insertobjectchart{ background: url('images/lc_drawchart.svg') no-repeat center !important; }
 .w2ui-icon.users{ background: url('images/contacts-dark.svg') no-repeat center !important; }
 .w2ui-icon.fullscreen{ background: url('images/lc_fullscreen.svg') no-repeat center !important; }
