--- a/loleaflet/css/toolbar.css
+++ b/loleaflet/css/toolbar.css
@@ -529,6 +529,7 @@ button.leaflet-control-search-next
 .w2ui-icon.aligntop{ background: url('images/lc_aligntop.svg') no-repeat center !important; }
 .w2ui-icon.alignmiddle{ background: url('images/lc_alignmiddle.svg') no-repeat center !important; }
 .w2ui-icon.alignbottom{ background: url('images/lc_alignbottom.svg') no-repeat center !important; }
+.w2ui-icon.functionwizard{ background: url('images/lc_functionwizard.svg') no-repeat center !important; }
 .w2ui-icon.autosum{ background: url('images/lc_autosum.svg') no-repeat center !important; }
 .w2ui-icon.backcolor{ background: url('images/lc_backcolor.svg') no-repeat center !important; }
 .w2ui-icon.bold{ background: url('images/lc_bold.svg') no-repeat center !important; }
