--- a/loleaflet/css/menubar.css
+++ b/loleaflet/css/menubar.css
@@ -355,8 +355,10 @@ serif;
 
 #menu-last-mod a {
     color: grey;
+    font-size: 12px;
+    margin-top: 3px;
     text-decoration: underline;
-    padding: 8px 15px 7px 15px;
+    padding: 4px 4px 4px 4px;
     z-index: 500;
     border: 1px solid transparent;
 }
