--- a/loleaflet/css/loleaflet.css
+++ b/loleaflet/css/loleaflet.css
@@ -471,6 +471,10 @@ body {
         -o-user-select: none;
 }
 
+.ui-dialog-titlebar {
+    padding: 0 1em !important;
+}
+
 /* Infobar */
 .vex-theme-bottom-right-corner .vex-dialog-message {
 	font-size: 1em;
