將各 toolbar-up 改成 editbar toolbar-down 改成 actionbar

--- a/loleaflet/css/toolbar.css
+++ b/loleaflet/css/toolbar.css
@@ -109,6 +109,10 @@
     width: 181px;
 }
 
+#tb_editbar_item_edit {
+    display: none;
+}
+
 #closebuttonwrapper {
     position: fixed;
     z-index: 1050;
@@ -131,10 +135,10 @@
 }
 .closebuttonimage{ background: url('images/lc_closedoc.svg') no-repeat center !important; }
 
-#tb_toolbar-down_item_left {
+#tb_actionbar_item_left {
     width: 45%;
 }
-#tb_toolbar-down_item_right {
+#tb_actionbar_item_right {
     width: 100%;
 }
 
