--- a/loleaflet/css/images.css
+++ b/loleaflet/css/images.css
@@ -346,6 +346,9 @@
 .selected{ background: url('images/lc_ok.svg') no-repeat center !important; }
 .repair{ background: url('images/lc_backward.svg') no-repeat center !important; }
 .insertsymbol{ background: url('images/lc_insertsymbol.svg') no-repeat center !important; }
+.fold{ background: url('images/fold.svg') no-repeat center !important; }
+.unfold{ background: url('images/unfold.svg') no-repeat center !important; }
+.hamburger{ background: url('images/hamburger.svg') no-repeat center !important; }
 .insertobjectchart{ background: url('images/lc_drawchart.svg') no-repeat center !important; }
 .users{ background: url('images/contacts-dark.svg') no-repeat center !important; }
 .fullscreen{ background: url('images/lc_fullscreen.svg') no-repeat center !important; }
