--- a/loleaflet/css/toolbar.css
+++ b/loleaflet/css/toolbar.css
@@ -356,6 +356,7 @@ button.leaflet-control-search-next
     padding: 2px;
     display: block;
     overflow: auto; /* child margins otherwise don't expand *this* element (parent) */
+    width: 344px;
 }
 
 .insertshape-grid .row {
