修正手機編輯模式 Calc 的工作表工具列跑掉的問題

--- a/loleaflet/css/spreadsheet.css
+++ b/loleaflet/css/spreadsheet.css
@@ -200,13 +200,13 @@
 	}
 
 @media (max-width: 767px) {
-	#spreadsheet-toolbar {
+	/*#spreadsheet-toolbar {
 		bottom: 0;
-	}
+	}*/
 
-	.spreadsheet-tabs-container {
+	/*.spreadsheet-tabs-container {
 		bottom: 0;
-	}
+	}*/
 
 	#spreadsheet-row-column-frame {
 		top: 73px;
