--- a/loleaflet/css/toolbar.css
+++ b/loleaflet/css/toolbar.css
@@ -3,7 +3,7 @@
     right: 0;
     padding-left: 9px;
     text-align: center;
-    z-index: 999;
+    /*z-index: 999;*/
     overflow: visible !important;
 }
 
@@ -14,7 +14,7 @@
     padding: 0;
     position: fixed;
     bottom: 0;
-    z-index: 1000;
+    /*z-index: 1000;*/
     border-top: 1px solid #bbbbbb;
 }
 
