--- a/loleaflet/css/selectionMarkers.css
+++ b/loleaflet/css/selectionMarkers.css
@@ -14,11 +14,17 @@
 	background-image: url('images/handle_end.png');
 	}
 
-@media (max-width: 768px),(max-device-height: 768px) {
+.leaflet-cursor-handler {
+	margin-left: -12px;
+	width: 25px;
+	height: 41px;
+	background-image: url('images/cursor-handler.png');
+}
+@media (max-width: 640px),(max-device-height: 640px) {
     .leaflet-selection-marker-start {
-	display: block;
+		display: block;
     }
     .leaflet-selection-marker-end {
-	display: block;
+		display: block;
     }
 }
