修正行插入形狀  quad-bevel 指定錯誤

--- a/loleaflet/css/images.css
+++ b/loleaflet/css/images.css
@@ -82,7 +82,7 @@
 .symbolshapes_brace-pair { background: url('images/lc_symbolshapes.brace-pair.svg') no-repeat center !important; }
 .symbolshapes_left-brace { background: url('images/lc_symbolshapes.left-brace.svg') no-repeat center !important; }
 .symbolshapes_right-brace { background: url('images/lc_symbolshapes.right-brace.svg') no-repeat center !important; }
-.symbolshapes_quad-bevel { background: url('images/lc_symbolshapes.right-brace.svg') no-repeat center !important; }
+.symbolshapes_quad-bevel { background: url('images/lc_symbolshapes.quad-bevel.svg') no-repeat center !important; }
 .symbolshapes_octagon-bevel { background: url('images/lc_symbolshapes.octagon-bevel.svg') no-repeat center !important; }
 .symbolshapes_diamond-bevel { background: url('images/lc_symbolshapes.diamond-bevel.svg') no-repeat center !important; }
 
