手機模式禁用下拉選單

--- a/loleaflet/css/loleaflet.css
+++ b/loleaflet/css/loleaflet.css
@@ -144,9 +144,11 @@ body {
     #spreadsheet-row-column-frame.readonly {
 	top: 41px !important;
     }
+/*
     #toolbar-hamburger {
 	width: 41px;
     }
+*/
     #closebutton {
 	display: none;
     }
