--- a/loleaflet/css/menubar.css
+++ b/loleaflet/css/menubar.css
@@ -301,9 +301,9 @@ serif;
         display: none;
     }
 
-    .main-menu-btn {
+    /*.main-menu-btn {
         display: inline-block;
-    }
+    }*/
 
     .main-nav {
         position: absolute;
