--- a/loleaflet/css/loleaflet.css
+++ b/loleaflet/css/loleaflet.css
@@ -91,7 +91,7 @@ body {
         height: 56px;
         right: 16px;
         bottom: 16px;
-        background-color: #ff8000;
+        background-color: rgba(255, 128, 0, 0.5);
         border-radius: 50%;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         z-index: 2000;
